--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,19 @@ on:
     - cron:  '0 0 * * *'
 
 jobs:
-  build:
+  go:
     runs-on: ubuntu-latest
     steps:
+    - name: Setup go 1.13
+      uses: actions/setup-go@v1
+      with: {go-version: '1.13'}
+    - name: Set system path
+      run: echo "##[add-path]$(go env GOPATH)/bin"
+    - run: go get github.com/cugu/go-resources/cmd/resources
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    # stix
     - uses: actions/checkout@v2
       with:
         repository: forensicanalysis/stixgo
@@ -18,16 +28,7 @@ jobs:
       with:
         repository: oasis-open/cti-stix2-json-schemas
         path: cti-stix2-json-schemas
-
-    - name: Setup go 1.13
-      uses: actions/setup-go@v1
-      with: {go-version: '1.13'}
-    - name: Set system path
-      run: echo "##[add-path]$(go env GOPATH)/bin"
-    - run: go get github.com/cugu/go-resources/cmd/resources
-
     - run: resources -trim "cti-stix2-json-schemas/schemas/" -package stixgo -output stixgo/assets.go cti-stix2-json-schemas/schemas/*/*
-
     - name: Commit files
       run: |
         git config --global user.email "git@cugu.eu"
@@ -36,3 +37,25 @@ jobs:
         git commit -m "Update assets"
         git push origin master
       working-directory: stixgo
+      continue-on-error: true
+
+    # artifactsgo
+    - uses: actions/checkout@v2
+      with:
+        repository: forensicanalysis/artifactsgo
+        path: artifactsgo
+        ssh-key: ${{ secrets.ARTIFACTSGO_DEPLOY_KEY }}
+    - uses: actions/checkout@v2
+      with:
+        repository: forensicanalysis/artifacts
+        path: artifacts
+    - run: go run artifacts2go.go artifacts/*.yaml
+    - name: Commit files
+      run: |
+        git config --global user.email "git@cugu.eu"
+        git config --global user.name "Asset Bot"
+        git add assets.go
+        git commit -m "Update assets"
+        git push origin master
+      working-directory: artifactsgo
+      # continue-on-error: true
