--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
         path: pyforensicstore_stix
         ssh-key: ${{ secrets.STIXPY_DEPLOY_KEY }}
     - run: mv stix2py/packaged/* pyforensicstore_stix
-    - name: Commit artifactsgo
+    - name: Commit pyforensicstore_stix
       run: |
         git config --global user.email "demian.kellermann@siemens.com"
         git config --global user.name "Asset Bot"
@@ -84,3 +84,4 @@ jobs:
         git commit -m "Update assets"
         git push origin master
       working-directory: pyforensicstore_stix
+      continue-on-error: true
